--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "express": "^4.18.1",
     "express-validation": "^4.1.0",
     "joi": "^17.6.0",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.18",
+    "sequelize": "^6.21.2",
     "winston": "^3.8.1",
     "winston-daily-rotate-file": "^4.7.1"
   },
