--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,12 @@
 {
   "env": {
-      "node": true,
-      "es2021": true
+    "node": true,
+    "es2021": true
   },
   "extends": "eslint:recommended",
   "parserOptions": {
-      "ecmaVersion": "latest",
-      "sourceType": "module"
+    "ecmaVersion": "latest",
+    "sourceType": "module"
   },
-  "rules": {
-  }
+  "rules": {}
 }
