--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.1",
     "express-validation": "^4.1.0",
     "joi": "^17.6.0",
+    "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.18",
     "sequelize": "^6.21.2",
